@@ -2,278 +2,900 @@
 
 package wgl.windows.x86;
 
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.VarHandle;
-import java.nio.ByteOrder;
+import java.lang.invoke.*;
 import java.lang.foreign.*;
+import java.nio.ByteOrder;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
+
 import static java.lang.foreign.ValueLayout.*;
+import static java.lang.foreign.MemoryLayout.PathElement.*;
+
+/**
+ * {@snippet lang=c :
+ * struct _DISK_CACHE_INFORMATION {
+ *     BOOLEAN ParametersSavable;
+ *     BOOLEAN ReadCacheEnabled;
+ *     BOOLEAN WriteCacheEnabled;
+ *     DISK_CACHE_RETENTION_PRIORITY ReadRetentionPriority;
+ *     DISK_CACHE_RETENTION_PRIORITY WriteRetentionPriority;
+ *     WORD DisablePrefetchTransferLength;
+ *     BOOLEAN PrefetchScalar;
+ *     union {
+ *         struct {
+ *             WORD Minimum;
+ *             WORD Maximum;
+ *             WORD MaximumBlocks;
+ *         } ScalarPrefetch;
+ *         struct {
+ *             WORD Minimum;
+ *             WORD Maximum;
+ *         } BlockPrefetch;
+ *     };
+ * }
+ * }
+ */
 public class _DISK_CACHE_INFORMATION {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_CHAR$LAYOUT.withName("ParametersSavable"),
-        Constants$root.C_CHAR$LAYOUT.withName("ReadCacheEnabled"),
-        Constants$root.C_CHAR$LAYOUT.withName("WriteCacheEnabled"),
-        MemoryLayout.paddingLayout(8),
-        Constants$root.C_LONG$LAYOUT.withName("ReadRetentionPriority"),
-        Constants$root.C_LONG$LAYOUT.withName("WriteRetentionPriority"),
-        Constants$root.C_SHORT$LAYOUT.withName("DisablePrefetchTransferLength"),
-        Constants$root.C_CHAR$LAYOUT.withName("PrefetchScalar"),
-        MemoryLayout.paddingLayout(8),
+    _DISK_CACHE_INFORMATION() {
+        // Should not be called directly
+    }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+        wgl_h.C_CHAR.withName("ParametersSavable"),
+        wgl_h.C_CHAR.withName("ReadCacheEnabled"),
+        wgl_h.C_CHAR.withName("WriteCacheEnabled"),
+        MemoryLayout.paddingLayout(1),
+        wgl_h.C_INT.withName("ReadRetentionPriority"),
+        wgl_h.C_INT.withName("WriteRetentionPriority"),
+        wgl_h.C_SHORT.withName("DisablePrefetchTransferLength"),
+        wgl_h.C_CHAR.withName("PrefetchScalar"),
+        MemoryLayout.paddingLayout(1),
         MemoryLayout.unionLayout(
-            MemoryLayout.structLayout(
-                Constants$root.C_SHORT$LAYOUT.withName("Minimum"),
-                Constants$root.C_SHORT$LAYOUT.withName("Maximum"),
-                Constants$root.C_SHORT$LAYOUT.withName("MaximumBlocks")
-            ).withName("ScalarPrefetch"),
-            MemoryLayout.structLayout(
-                Constants$root.C_SHORT$LAYOUT.withName("Minimum"),
-                Constants$root.C_SHORT$LAYOUT.withName("Maximum")
-            ).withName("BlockPrefetch")
-        ).withName("$anon$0"),
-        MemoryLayout.paddingLayout(16)
+            _DISK_CACHE_INFORMATION.ScalarPrefetch.layout().withName("ScalarPrefetch"),
+            _DISK_CACHE_INFORMATION.BlockPrefetch.layout().withName("BlockPrefetch")
+        ).withName("$anon$8796:5"),
+        MemoryLayout.paddingLayout(2)
     ).withName("_DISK_CACHE_INFORMATION");
-    public static MemoryLayout $LAYOUT() {
-        return _DISK_CACHE_INFORMATION.$struct$LAYOUT;
+
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
     }
-    static final VarHandle ParametersSavable$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("ParametersSavable"));
-    public static VarHandle ParametersSavable$VH() {
-        return _DISK_CACHE_INFORMATION.ParametersSavable$VH;
+
+    private static final OfByte ParametersSavable$LAYOUT = (OfByte)$LAYOUT.select(groupElement("ParametersSavable"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BOOLEAN ParametersSavable
+     * }
+     */
+    public static final OfByte ParametersSavable$layout() {
+        return ParametersSavable$LAYOUT;
     }
-    public static byte ParametersSavable$get(MemorySegment seg) {
-        return (byte)_DISK_CACHE_INFORMATION.ParametersSavable$VH.get(seg);
+
+    private static final long ParametersSavable$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BOOLEAN ParametersSavable
+     * }
+     */
+    public static final long ParametersSavable$offset() {
+        return ParametersSavable$OFFSET;
     }
-    public static void ParametersSavable$set( MemorySegment seg, byte x) {
-        _DISK_CACHE_INFORMATION.ParametersSavable$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BOOLEAN ParametersSavable
+     * }
+     */
+    public static byte ParametersSavable(MemorySegment struct) {
+        return struct.get(ParametersSavable$LAYOUT, ParametersSavable$OFFSET);
     }
-    public static byte ParametersSavable$get(MemorySegment seg, long index) {
-        return (byte)_DISK_CACHE_INFORMATION.ParametersSavable$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BOOLEAN ParametersSavable
+     * }
+     */
+    public static void ParametersSavable(MemorySegment struct, byte fieldValue) {
+        struct.set(ParametersSavable$LAYOUT, ParametersSavable$OFFSET, fieldValue);
     }
-    public static void ParametersSavable$set(MemorySegment seg, long index, byte x) {
-        _DISK_CACHE_INFORMATION.ParametersSavable$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfByte ReadCacheEnabled$LAYOUT = (OfByte)$LAYOUT.select(groupElement("ReadCacheEnabled"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BOOLEAN ReadCacheEnabled
+     * }
+     */
+    public static final OfByte ReadCacheEnabled$layout() {
+        return ReadCacheEnabled$LAYOUT;
     }
-    static final VarHandle ReadCacheEnabled$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("ReadCacheEnabled"));
-    public static VarHandle ReadCacheEnabled$VH() {
-        return _DISK_CACHE_INFORMATION.ReadCacheEnabled$VH;
+
+    private static final long ReadCacheEnabled$OFFSET = 1;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BOOLEAN ReadCacheEnabled
+     * }
+     */
+    public static final long ReadCacheEnabled$offset() {
+        return ReadCacheEnabled$OFFSET;
     }
-    public static byte ReadCacheEnabled$get(MemorySegment seg) {
-        return (byte)_DISK_CACHE_INFORMATION.ReadCacheEnabled$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BOOLEAN ReadCacheEnabled
+     * }
+     */
+    public static byte ReadCacheEnabled(MemorySegment struct) {
+        return struct.get(ReadCacheEnabled$LAYOUT, ReadCacheEnabled$OFFSET);
     }
-    public static void ReadCacheEnabled$set( MemorySegment seg, byte x) {
-        _DISK_CACHE_INFORMATION.ReadCacheEnabled$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BOOLEAN ReadCacheEnabled
+     * }
+     */
+    public static void ReadCacheEnabled(MemorySegment struct, byte fieldValue) {
+        struct.set(ReadCacheEnabled$LAYOUT, ReadCacheEnabled$OFFSET, fieldValue);
     }
-    public static byte ReadCacheEnabled$get(MemorySegment seg, long index) {
-        return (byte)_DISK_CACHE_INFORMATION.ReadCacheEnabled$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final OfByte WriteCacheEnabled$LAYOUT = (OfByte)$LAYOUT.select(groupElement("WriteCacheEnabled"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BOOLEAN WriteCacheEnabled
+     * }
+     */
+    public static final OfByte WriteCacheEnabled$layout() {
+        return WriteCacheEnabled$LAYOUT;
     }
-    public static void ReadCacheEnabled$set(MemorySegment seg, long index, byte x) {
-        _DISK_CACHE_INFORMATION.ReadCacheEnabled$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final long WriteCacheEnabled$OFFSET = 2;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BOOLEAN WriteCacheEnabled
+     * }
+     */
+    public static final long WriteCacheEnabled$offset() {
+        return WriteCacheEnabled$OFFSET;
     }
-    static final VarHandle WriteCacheEnabled$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("WriteCacheEnabled"));
-    public static VarHandle WriteCacheEnabled$VH() {
-        return _DISK_CACHE_INFORMATION.WriteCacheEnabled$VH;
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BOOLEAN WriteCacheEnabled
+     * }
+     */
+    public static byte WriteCacheEnabled(MemorySegment struct) {
+        return struct.get(WriteCacheEnabled$LAYOUT, WriteCacheEnabled$OFFSET);
     }
-    public static byte WriteCacheEnabled$get(MemorySegment seg) {
-        return (byte)_DISK_CACHE_INFORMATION.WriteCacheEnabled$VH.get(seg);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BOOLEAN WriteCacheEnabled
+     * }
+     */
+    public static void WriteCacheEnabled(MemorySegment struct, byte fieldValue) {
+        struct.set(WriteCacheEnabled$LAYOUT, WriteCacheEnabled$OFFSET, fieldValue);
     }
-    public static void WriteCacheEnabled$set( MemorySegment seg, byte x) {
-        _DISK_CACHE_INFORMATION.WriteCacheEnabled$VH.set(seg, x);
+
+    private static final OfInt ReadRetentionPriority$LAYOUT = (OfInt)$LAYOUT.select(groupElement("ReadRetentionPriority"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY ReadRetentionPriority
+     * }
+     */
+    public static final OfInt ReadRetentionPriority$layout() {
+        return ReadRetentionPriority$LAYOUT;
     }
-    public static byte WriteCacheEnabled$get(MemorySegment seg, long index) {
-        return (byte)_DISK_CACHE_INFORMATION.WriteCacheEnabled$VH.get(seg.asSlice(index*sizeof()));
+
+    private static final long ReadRetentionPriority$OFFSET = 4;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY ReadRetentionPriority
+     * }
+     */
+    public static final long ReadRetentionPriority$offset() {
+        return ReadRetentionPriority$OFFSET;
     }
-    public static void WriteCacheEnabled$set(MemorySegment seg, long index, byte x) {
-        _DISK_CACHE_INFORMATION.WriteCacheEnabled$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY ReadRetentionPriority
+     * }
+     */
+    public static int ReadRetentionPriority(MemorySegment struct) {
+        return struct.get(ReadRetentionPriority$LAYOUT, ReadRetentionPriority$OFFSET);
     }
-    static final VarHandle ReadRetentionPriority$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("ReadRetentionPriority"));
-    public static VarHandle ReadRetentionPriority$VH() {
-        return _DISK_CACHE_INFORMATION.ReadRetentionPriority$VH;
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY ReadRetentionPriority
+     * }
+     */
+    public static void ReadRetentionPriority(MemorySegment struct, int fieldValue) {
+        struct.set(ReadRetentionPriority$LAYOUT, ReadRetentionPriority$OFFSET, fieldValue);
     }
-    public static int ReadRetentionPriority$get(MemorySegment seg) {
-        return (int)_DISK_CACHE_INFORMATION.ReadRetentionPriority$VH.get(seg);
+
+    private static final OfInt WriteRetentionPriority$LAYOUT = (OfInt)$LAYOUT.select(groupElement("WriteRetentionPriority"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY WriteRetentionPriority
+     * }
+     */
+    public static final OfInt WriteRetentionPriority$layout() {
+        return WriteRetentionPriority$LAYOUT;
     }
-    public static void ReadRetentionPriority$set( MemorySegment seg, int x) {
-        _DISK_CACHE_INFORMATION.ReadRetentionPriority$VH.set(seg, x);
+
+    private static final long WriteRetentionPriority$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY WriteRetentionPriority
+     * }
+     */
+    public static final long WriteRetentionPriority$offset() {
+        return WriteRetentionPriority$OFFSET;
     }
-    public static int ReadRetentionPriority$get(MemorySegment seg, long index) {
-        return (int)_DISK_CACHE_INFORMATION.ReadRetentionPriority$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY WriteRetentionPriority
+     * }
+     */
+    public static int WriteRetentionPriority(MemorySegment struct) {
+        return struct.get(WriteRetentionPriority$LAYOUT, WriteRetentionPriority$OFFSET);
     }
-    public static void ReadRetentionPriority$set(MemorySegment seg, long index, int x) {
-        _DISK_CACHE_INFORMATION.ReadRetentionPriority$VH.set(seg.asSlice(index*sizeof()), x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DISK_CACHE_RETENTION_PRIORITY WriteRetentionPriority
+     * }
+     */
+    public static void WriteRetentionPriority(MemorySegment struct, int fieldValue) {
+        struct.set(WriteRetentionPriority$LAYOUT, WriteRetentionPriority$OFFSET, fieldValue);
     }
-    static final VarHandle WriteRetentionPriority$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("WriteRetentionPriority"));
-    public static VarHandle WriteRetentionPriority$VH() {
-        return _DISK_CACHE_INFORMATION.WriteRetentionPriority$VH;
+
+    private static final OfShort DisablePrefetchTransferLength$LAYOUT = (OfShort)$LAYOUT.select(groupElement("DisablePrefetchTransferLength"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * WORD DisablePrefetchTransferLength
+     * }
+     */
+    public static final OfShort DisablePrefetchTransferLength$layout() {
+        return DisablePrefetchTransferLength$LAYOUT;
     }
-    public static int WriteRetentionPriority$get(MemorySegment seg) {
-        return (int)_DISK_CACHE_INFORMATION.WriteRetentionPriority$VH.get(seg);
+
+    private static final long DisablePrefetchTransferLength$OFFSET = 12;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * WORD DisablePrefetchTransferLength
+     * }
+     */
+    public static final long DisablePrefetchTransferLength$offset() {
+        return DisablePrefetchTransferLength$OFFSET;
     }
-    public static void WriteRetentionPriority$set( MemorySegment seg, int x) {
-        _DISK_CACHE_INFORMATION.WriteRetentionPriority$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * WORD DisablePrefetchTransferLength
+     * }
+     */
+    public static short DisablePrefetchTransferLength(MemorySegment struct) {
+        return struct.get(DisablePrefetchTransferLength$LAYOUT, DisablePrefetchTransferLength$OFFSET);
     }
-    public static int WriteRetentionPriority$get(MemorySegment seg, long index) {
-        return (int)_DISK_CACHE_INFORMATION.WriteRetentionPriority$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * WORD DisablePrefetchTransferLength
+     * }
+     */
+    public static void DisablePrefetchTransferLength(MemorySegment struct, short fieldValue) {
+        struct.set(DisablePrefetchTransferLength$LAYOUT, DisablePrefetchTransferLength$OFFSET, fieldValue);
     }
-    public static void WriteRetentionPriority$set(MemorySegment seg, long index, int x) {
-        _DISK_CACHE_INFORMATION.WriteRetentionPriority$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfByte PrefetchScalar$LAYOUT = (OfByte)$LAYOUT.select(groupElement("PrefetchScalar"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * BOOLEAN PrefetchScalar
+     * }
+     */
+    public static final OfByte PrefetchScalar$layout() {
+        return PrefetchScalar$LAYOUT;
     }
-    static final VarHandle DisablePrefetchTransferLength$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("DisablePrefetchTransferLength"));
-    public static VarHandle DisablePrefetchTransferLength$VH() {
-        return _DISK_CACHE_INFORMATION.DisablePrefetchTransferLength$VH;
+
+    private static final long PrefetchScalar$OFFSET = 14;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * BOOLEAN PrefetchScalar
+     * }
+     */
+    public static final long PrefetchScalar$offset() {
+        return PrefetchScalar$OFFSET;
     }
-    public static short DisablePrefetchTransferLength$get(MemorySegment seg) {
-        return (short)_DISK_CACHE_INFORMATION.DisablePrefetchTransferLength$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * BOOLEAN PrefetchScalar
+     * }
+     */
+    public static byte PrefetchScalar(MemorySegment struct) {
+        return struct.get(PrefetchScalar$LAYOUT, PrefetchScalar$OFFSET);
     }
-    public static void DisablePrefetchTransferLength$set( MemorySegment seg, short x) {
-        _DISK_CACHE_INFORMATION.DisablePrefetchTransferLength$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * BOOLEAN PrefetchScalar
+     * }
+     */
+    public static void PrefetchScalar(MemorySegment struct, byte fieldValue) {
+        struct.set(PrefetchScalar$LAYOUT, PrefetchScalar$OFFSET, fieldValue);
     }
-    public static short DisablePrefetchTransferLength$get(MemorySegment seg, long index) {
-        return (short)_DISK_CACHE_INFORMATION.DisablePrefetchTransferLength$VH.get(seg.asSlice(index*sizeof()));
-    }
-    public static void DisablePrefetchTransferLength$set(MemorySegment seg, long index, short x) {
-        _DISK_CACHE_INFORMATION.DisablePrefetchTransferLength$VH.set(seg.asSlice(index*sizeof()), x);
-    }
-    static final VarHandle PrefetchScalar$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("PrefetchScalar"));
-    public static VarHandle PrefetchScalar$VH() {
-        return _DISK_CACHE_INFORMATION.PrefetchScalar$VH;
-    }
-    public static byte PrefetchScalar$get(MemorySegment seg) {
-        return (byte)_DISK_CACHE_INFORMATION.PrefetchScalar$VH.get(seg);
-    }
-    public static void PrefetchScalar$set( MemorySegment seg, byte x) {
-        _DISK_CACHE_INFORMATION.PrefetchScalar$VH.set(seg, x);
-    }
-    public static byte PrefetchScalar$get(MemorySegment seg, long index) {
-        return (byte)_DISK_CACHE_INFORMATION.PrefetchScalar$VH.get(seg.asSlice(index*sizeof()));
-    }
-    public static void PrefetchScalar$set(MemorySegment seg, long index, byte x) {
-        _DISK_CACHE_INFORMATION.PrefetchScalar$VH.set(seg.asSlice(index*sizeof()), x);
-    }
+
+    /**
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     *     WORD MaximumBlocks;
+     * }
+     * }
+     */
     public static class ScalarPrefetch {
 
-        static final  GroupLayout ScalarPrefetch$struct$LAYOUT = MemoryLayout.structLayout(
-            Constants$root.C_SHORT$LAYOUT.withName("Minimum"),
-            Constants$root.C_SHORT$LAYOUT.withName("Maximum"),
-            Constants$root.C_SHORT$LAYOUT.withName("MaximumBlocks")
-        );
-        public static MemoryLayout $LAYOUT() {
-            return ScalarPrefetch.ScalarPrefetch$struct$LAYOUT;
+        ScalarPrefetch() {
+            // Should not be called directly
         }
-        static final VarHandle Minimum$VH = ScalarPrefetch$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Minimum"));
-        public static VarHandle Minimum$VH() {
-            return ScalarPrefetch.Minimum$VH;
+
+        private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+            wgl_h.C_SHORT.withName("Minimum"),
+            wgl_h.C_SHORT.withName("Maximum"),
+            wgl_h.C_SHORT.withName("MaximumBlocks")
+        ).withName("$anon$8797:9");
+
+        /**
+         * The layout of this struct
+         */
+        public static final GroupLayout layout() {
+            return $LAYOUT;
         }
-        public static short Minimum$get(MemorySegment seg) {
-            return (short)ScalarPrefetch.Minimum$VH.get(seg);
+
+        private static final OfShort Minimum$LAYOUT = (OfShort)$LAYOUT.select(groupElement("Minimum"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static final OfShort Minimum$layout() {
+            return Minimum$LAYOUT;
         }
-        public static void Minimum$set( MemorySegment seg, short x) {
-            ScalarPrefetch.Minimum$VH.set(seg, x);
+
+        private static final long Minimum$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static final long Minimum$offset() {
+            return Minimum$OFFSET;
         }
-        public static short Minimum$get(MemorySegment seg, long index) {
-            return (short)ScalarPrefetch.Minimum$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static short Minimum(MemorySegment struct) {
+            return struct.get(Minimum$LAYOUT, Minimum$OFFSET);
         }
-        public static void Minimum$set(MemorySegment seg, long index, short x) {
-            ScalarPrefetch.Minimum$VH.set(seg.asSlice(index*sizeof()), x);
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static void Minimum(MemorySegment struct, short fieldValue) {
+            struct.set(Minimum$LAYOUT, Minimum$OFFSET, fieldValue);
         }
-        static final VarHandle Maximum$VH = ScalarPrefetch$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Maximum"));
-        public static VarHandle Maximum$VH() {
-            return ScalarPrefetch.Maximum$VH;
+
+        private static final OfShort Maximum$LAYOUT = (OfShort)$LAYOUT.select(groupElement("Maximum"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static final OfShort Maximum$layout() {
+            return Maximum$LAYOUT;
         }
-        public static short Maximum$get(MemorySegment seg) {
-            return (short)ScalarPrefetch.Maximum$VH.get(seg);
+
+        private static final long Maximum$OFFSET = 2;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static final long Maximum$offset() {
+            return Maximum$OFFSET;
         }
-        public static void Maximum$set( MemorySegment seg, short x) {
-            ScalarPrefetch.Maximum$VH.set(seg, x);
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static short Maximum(MemorySegment struct) {
+            return struct.get(Maximum$LAYOUT, Maximum$OFFSET);
         }
-        public static short Maximum$get(MemorySegment seg, long index) {
-            return (short)ScalarPrefetch.Maximum$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static void Maximum(MemorySegment struct, short fieldValue) {
+            struct.set(Maximum$LAYOUT, Maximum$OFFSET, fieldValue);
         }
-        public static void Maximum$set(MemorySegment seg, long index, short x) {
-            ScalarPrefetch.Maximum$VH.set(seg.asSlice(index*sizeof()), x);
+
+        private static final OfShort MaximumBlocks$LAYOUT = (OfShort)$LAYOUT.select(groupElement("MaximumBlocks"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * WORD MaximumBlocks
+         * }
+         */
+        public static final OfShort MaximumBlocks$layout() {
+            return MaximumBlocks$LAYOUT;
         }
-        static final VarHandle MaximumBlocks$VH = ScalarPrefetch$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("MaximumBlocks"));
-        public static VarHandle MaximumBlocks$VH() {
-            return ScalarPrefetch.MaximumBlocks$VH;
+
+        private static final long MaximumBlocks$OFFSET = 4;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * WORD MaximumBlocks
+         * }
+         */
+        public static final long MaximumBlocks$offset() {
+            return MaximumBlocks$OFFSET;
         }
-        public static short MaximumBlocks$get(MemorySegment seg) {
-            return (short)ScalarPrefetch.MaximumBlocks$VH.get(seg);
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * WORD MaximumBlocks
+         * }
+         */
+        public static short MaximumBlocks(MemorySegment struct) {
+            return struct.get(MaximumBlocks$LAYOUT, MaximumBlocks$OFFSET);
         }
-        public static void MaximumBlocks$set( MemorySegment seg, short x) {
-            ScalarPrefetch.MaximumBlocks$VH.set(seg, x);
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * WORD MaximumBlocks
+         * }
+         */
+        public static void MaximumBlocks(MemorySegment struct, short fieldValue) {
+            struct.set(MaximumBlocks$LAYOUT, MaximumBlocks$OFFSET, fieldValue);
         }
-        public static short MaximumBlocks$get(MemorySegment seg, long index) {
-            return (short)ScalarPrefetch.MaximumBlocks$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+         * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+         */
+        public static MemorySegment asSlice(MemorySegment array, long index) {
+            return array.asSlice(layout().byteSize() * index);
         }
-        public static void MaximumBlocks$set(MemorySegment seg, long index, short x) {
-            ScalarPrefetch.MaximumBlocks$VH.set(seg.asSlice(index*sizeof()), x);
+
+        /**
+         * The size (in bytes) of this struct
+         */
+        public static long sizeof() { return layout().byteSize(); }
+
+        /**
+         * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+         */
+        public static MemorySegment allocate(SegmentAllocator allocator) {
+            return allocator.allocate(layout());
         }
-        public static long sizeof() { return $LAYOUT().byteSize(); }
-        public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-            return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+        /**
+         * Allocate an array of size {@code elementCount} using {@code allocator}.
+         * The returned segment has size {@code elementCount * layout().byteSize()}.
+         */
+        public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+            return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+            return reinterpret(addr, 1, arena, cleanup);
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code elementCount * layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+            return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+        }
     }
 
-    public static MemorySegment ScalarPrefetch$slice(MemorySegment seg) {
-        return seg.asSlice(16, 6);
+    private static final GroupLayout ScalarPrefetch$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("$anon$8796:5"), groupElement("ScalarPrefetch"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     *     WORD MaximumBlocks;
+     * } ScalarPrefetch
+     * }
+     */
+    public static final GroupLayout ScalarPrefetch$layout() {
+        return ScalarPrefetch$LAYOUT;
     }
+
+    private static final long ScalarPrefetch$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     *     WORD MaximumBlocks;
+     * } ScalarPrefetch
+     * }
+     */
+    public static final long ScalarPrefetch$offset() {
+        return ScalarPrefetch$OFFSET;
+    }
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     *     WORD MaximumBlocks;
+     * } ScalarPrefetch
+     * }
+     */
+    public static MemorySegment ScalarPrefetch(MemorySegment struct) {
+        return struct.asSlice(ScalarPrefetch$OFFSET, ScalarPrefetch$LAYOUT.byteSize());
+    }
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     *     WORD MaximumBlocks;
+     * } ScalarPrefetch
+     * }
+     */
+    public static void ScalarPrefetch(MemorySegment struct, MemorySegment fieldValue) {
+        MemorySegment.copy(fieldValue, 0L, struct, ScalarPrefetch$OFFSET, ScalarPrefetch$LAYOUT.byteSize());
+    }
+
+    /**
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     * }
+     * }
+     */
     public static class BlockPrefetch {
 
-        static final  GroupLayout BlockPrefetch$struct$LAYOUT = MemoryLayout.structLayout(
-            Constants$root.C_SHORT$LAYOUT.withName("Minimum"),
-            Constants$root.C_SHORT$LAYOUT.withName("Maximum")
-        );
-        public static MemoryLayout $LAYOUT() {
-            return BlockPrefetch.BlockPrefetch$struct$LAYOUT;
+        BlockPrefetch() {
+            // Should not be called directly
         }
-        static final VarHandle Minimum$VH = BlockPrefetch$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Minimum"));
-        public static VarHandle Minimum$VH() {
-            return BlockPrefetch.Minimum$VH;
+
+        private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+            wgl_h.C_SHORT.withName("Minimum"),
+            wgl_h.C_SHORT.withName("Maximum")
+        ).withName("$anon$8809:9");
+
+        /**
+         * The layout of this struct
+         */
+        public static final GroupLayout layout() {
+            return $LAYOUT;
         }
-        public static short Minimum$get(MemorySegment seg) {
-            return (short)BlockPrefetch.Minimum$VH.get(seg);
+
+        private static final OfShort Minimum$LAYOUT = (OfShort)$LAYOUT.select(groupElement("Minimum"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static final OfShort Minimum$layout() {
+            return Minimum$LAYOUT;
         }
-        public static void Minimum$set( MemorySegment seg, short x) {
-            BlockPrefetch.Minimum$VH.set(seg, x);
+
+        private static final long Minimum$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static final long Minimum$offset() {
+            return Minimum$OFFSET;
         }
-        public static short Minimum$get(MemorySegment seg, long index) {
-            return (short)BlockPrefetch.Minimum$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static short Minimum(MemorySegment struct) {
+            return struct.get(Minimum$LAYOUT, Minimum$OFFSET);
         }
-        public static void Minimum$set(MemorySegment seg, long index, short x) {
-            BlockPrefetch.Minimum$VH.set(seg.asSlice(index*sizeof()), x);
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * WORD Minimum
+         * }
+         */
+        public static void Minimum(MemorySegment struct, short fieldValue) {
+            struct.set(Minimum$LAYOUT, Minimum$OFFSET, fieldValue);
         }
-        static final VarHandle Maximum$VH = BlockPrefetch$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Maximum"));
-        public static VarHandle Maximum$VH() {
-            return BlockPrefetch.Maximum$VH;
+
+        private static final OfShort Maximum$LAYOUT = (OfShort)$LAYOUT.select(groupElement("Maximum"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static final OfShort Maximum$layout() {
+            return Maximum$LAYOUT;
         }
-        public static short Maximum$get(MemorySegment seg) {
-            return (short)BlockPrefetch.Maximum$VH.get(seg);
+
+        private static final long Maximum$OFFSET = 2;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static final long Maximum$offset() {
+            return Maximum$OFFSET;
         }
-        public static void Maximum$set( MemorySegment seg, short x) {
-            BlockPrefetch.Maximum$VH.set(seg, x);
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static short Maximum(MemorySegment struct) {
+            return struct.get(Maximum$LAYOUT, Maximum$OFFSET);
         }
-        public static short Maximum$get(MemorySegment seg, long index) {
-            return (short)BlockPrefetch.Maximum$VH.get(seg.asSlice(index*sizeof()));
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * WORD Maximum
+         * }
+         */
+        public static void Maximum(MemorySegment struct, short fieldValue) {
+            struct.set(Maximum$LAYOUT, Maximum$OFFSET, fieldValue);
         }
-        public static void Maximum$set(MemorySegment seg, long index, short x) {
-            BlockPrefetch.Maximum$VH.set(seg.asSlice(index*sizeof()), x);
+
+        /**
+         * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+         * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+         */
+        public static MemorySegment asSlice(MemorySegment array, long index) {
+            return array.asSlice(layout().byteSize() * index);
         }
-        public static long sizeof() { return $LAYOUT().byteSize(); }
-        public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-            return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+        /**
+         * The size (in bytes) of this struct
+         */
+        public static long sizeof() { return layout().byteSize(); }
+
+        /**
+         * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+         */
+        public static MemorySegment allocate(SegmentAllocator allocator) {
+            return allocator.allocate(layout());
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+        /**
+         * Allocate an array of size {@code elementCount} using {@code allocator}.
+         * The returned segment has size {@code elementCount * layout().byteSize()}.
+         */
+        public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+            return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+            return reinterpret(addr, 1, arena, cleanup);
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code elementCount * layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+            return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+        }
     }
 
-    public static MemorySegment BlockPrefetch$slice(MemorySegment seg) {
-        return seg.asSlice(16, 4);
+    private static final GroupLayout BlockPrefetch$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("$anon$8796:5"), groupElement("BlockPrefetch"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     * } BlockPrefetch
+     * }
+     */
+    public static final GroupLayout BlockPrefetch$layout() {
+        return BlockPrefetch$LAYOUT;
     }
-    public static long sizeof() { return $LAYOUT().byteSize(); }
-    public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+    private static final long BlockPrefetch$OFFSET = 16;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     * } BlockPrefetch
+     * }
+     */
+    public static final long BlockPrefetch$offset() {
+        return BlockPrefetch$OFFSET;
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     * } BlockPrefetch
+     * }
+     */
+    public static MemorySegment BlockPrefetch(MemorySegment struct) {
+        return struct.asSlice(BlockPrefetch$OFFSET, BlockPrefetch$LAYOUT.byteSize());
+    }
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * struct {
+     *     WORD Minimum;
+     *     WORD Maximum;
+     * } BlockPrefetch
+     * }
+     */
+    public static void BlockPrefetch(MemorySegment struct, MemorySegment fieldValue) {
+        MemorySegment.copy(fieldValue, 0L, struct, BlockPrefetch$OFFSET, BlockPrefetch$LAYOUT.byteSize());
+    }
+
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
+    }
+
+    /**
+     * The size (in bytes) of this struct
+     */
+    public static long sizeof() { return layout().byteSize(); }
+
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
+    public static MemorySegment allocate(SegmentAllocator allocator) {
+        return allocator.allocate(layout());
+    }
+
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+    }
 }
-
 
