@@ -2,194 +2,693 @@
 
 package wgl.windows.x86;
 
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.VarHandle;
-import java.nio.ByteOrder;
+import java.lang.invoke.*;
 import java.lang.foreign.*;
+import java.nio.ByteOrder;
+import java.util.*;
+import java.util.function.*;
+import java.util.stream.*;
+
 import static java.lang.foreign.ValueLayout.*;
+import static java.lang.foreign.MemoryLayout.PathElement.*;
+
+/**
+ * {@snippet lang=c :
+ * struct _REASON_CONTEXT {
+ *     ULONG Version;
+ *     DWORD Flags;
+ *     union {
+ *         struct {
+ *             HMODULE LocalizedReasonModule;
+ *             ULONG LocalizedReasonId;
+ *             ULONG ReasonStringCount;
+ *             LPWSTR *ReasonStrings;
+ *         } Detailed;
+ *         LPWSTR SimpleReasonString;
+ *     } Reason;
+ * }
+ * }
+ */
 public class _REASON_CONTEXT {
 
-    static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_LONG$LAYOUT.withName("Version"),
-        Constants$root.C_LONG$LAYOUT.withName("Flags"),
-        MemoryLayout.unionLayout(
-            MemoryLayout.structLayout(
-                Constants$root.C_POINTER$LAYOUT.withName("LocalizedReasonModule"),
-                Constants$root.C_LONG$LAYOUT.withName("LocalizedReasonId"),
-                Constants$root.C_LONG$LAYOUT.withName("ReasonStringCount"),
-                Constants$root.C_POINTER$LAYOUT.withName("ReasonStrings")
-            ).withName("Detailed"),
-            Constants$root.C_POINTER$LAYOUT.withName("SimpleReasonString")
-        ).withName("Reason")
+    _REASON_CONTEXT() {
+        // Should not be called directly
+    }
+
+    private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+        wgl_h.C_LONG.withName("Version"),
+        wgl_h.C_LONG.withName("Flags"),
+        _REASON_CONTEXT.Reason.layout().withName("Reason")
     ).withName("_REASON_CONTEXT");
-    public static MemoryLayout $LAYOUT() {
-        return _REASON_CONTEXT.$struct$LAYOUT;
+
+    /**
+     * The layout of this struct
+     */
+    public static final GroupLayout layout() {
+        return $LAYOUT;
     }
-    static final VarHandle Version$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Version"));
-    public static VarHandle Version$VH() {
-        return _REASON_CONTEXT.Version$VH;
+
+    private static final OfInt Version$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Version"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * ULONG Version
+     * }
+     */
+    public static final OfInt Version$layout() {
+        return Version$LAYOUT;
     }
-    public static int Version$get(MemorySegment seg) {
-        return (int)_REASON_CONTEXT.Version$VH.get(seg);
+
+    private static final long Version$OFFSET = 0;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * ULONG Version
+     * }
+     */
+    public static final long Version$offset() {
+        return Version$OFFSET;
     }
-    public static void Version$set( MemorySegment seg, int x) {
-        _REASON_CONTEXT.Version$VH.set(seg, x);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * ULONG Version
+     * }
+     */
+    public static int Version(MemorySegment struct) {
+        return struct.get(Version$LAYOUT, Version$OFFSET);
     }
-    public static int Version$get(MemorySegment seg, long index) {
-        return (int)_REASON_CONTEXT.Version$VH.get(seg.asSlice(index*sizeof()));
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * ULONG Version
+     * }
+     */
+    public static void Version(MemorySegment struct, int fieldValue) {
+        struct.set(Version$LAYOUT, Version$OFFSET, fieldValue);
     }
-    public static void Version$set(MemorySegment seg, long index, int x) {
-        _REASON_CONTEXT.Version$VH.set(seg.asSlice(index*sizeof()), x);
+
+    private static final OfInt Flags$LAYOUT = (OfInt)$LAYOUT.select(groupElement("Flags"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * DWORD Flags
+     * }
+     */
+    public static final OfInt Flags$layout() {
+        return Flags$LAYOUT;
     }
-    static final VarHandle Flags$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("Flags"));
-    public static VarHandle Flags$VH() {
-        return _REASON_CONTEXT.Flags$VH;
+
+    private static final long Flags$OFFSET = 4;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * DWORD Flags
+     * }
+     */
+    public static final long Flags$offset() {
+        return Flags$OFFSET;
     }
-    public static int Flags$get(MemorySegment seg) {
-        return (int)_REASON_CONTEXT.Flags$VH.get(seg);
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * DWORD Flags
+     * }
+     */
+    public static int Flags(MemorySegment struct) {
+        return struct.get(Flags$LAYOUT, Flags$OFFSET);
     }
-    public static void Flags$set( MemorySegment seg, int x) {
-        _REASON_CONTEXT.Flags$VH.set(seg, x);
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * DWORD Flags
+     * }
+     */
+    public static void Flags(MemorySegment struct, int fieldValue) {
+        struct.set(Flags$LAYOUT, Flags$OFFSET, fieldValue);
     }
-    public static int Flags$get(MemorySegment seg, long index) {
-        return (int)_REASON_CONTEXT.Flags$VH.get(seg.asSlice(index*sizeof()));
-    }
-    public static void Flags$set(MemorySegment seg, long index, int x) {
-        _REASON_CONTEXT.Flags$VH.set(seg.asSlice(index*sizeof()), x);
-    }
+
+    /**
+     * {@snippet lang=c :
+     * union {
+     *     struct {
+     *         HMODULE LocalizedReasonModule;
+     *         ULONG LocalizedReasonId;
+     *         ULONG ReasonStringCount;
+     *         LPWSTR *ReasonStrings;
+     *     } Detailed;
+     *     LPWSTR SimpleReasonString;
+     * }
+     * }
+     */
     public static class Reason {
 
-        static final  GroupLayout Reason$union$LAYOUT = MemoryLayout.unionLayout(
-            MemoryLayout.structLayout(
-                Constants$root.C_POINTER$LAYOUT.withName("LocalizedReasonModule"),
-                Constants$root.C_LONG$LAYOUT.withName("LocalizedReasonId"),
-                Constants$root.C_LONG$LAYOUT.withName("ReasonStringCount"),
-                Constants$root.C_POINTER$LAYOUT.withName("ReasonStrings")
-            ).withName("Detailed"),
-            Constants$root.C_POINTER$LAYOUT.withName("SimpleReasonString")
-        );
-        public static MemoryLayout $LAYOUT() {
-            return Reason.Reason$union$LAYOUT;
+        Reason() {
+            // Should not be called directly
         }
+
+        private static final GroupLayout $LAYOUT = MemoryLayout.unionLayout(
+            _REASON_CONTEXT.Reason.Detailed.layout().withName("Detailed"),
+            wgl_h.C_POINTER.withName("SimpleReasonString")
+        ).withName("$anon$268:5");
+
+        /**
+         * The layout of this union
+         */
+        public static final GroupLayout layout() {
+            return $LAYOUT;
+        }
+
+        /**
+         * {@snippet lang=c :
+         * struct {
+         *     HMODULE LocalizedReasonModule;
+         *     ULONG LocalizedReasonId;
+         *     ULONG ReasonStringCount;
+         *     LPWSTR *ReasonStrings;
+         * }
+         * }
+         */
         public static class Detailed {
 
-            static final  GroupLayout Reason$Detailed$struct$LAYOUT = MemoryLayout.structLayout(
-                Constants$root.C_POINTER$LAYOUT.withName("LocalizedReasonModule"),
-                Constants$root.C_LONG$LAYOUT.withName("LocalizedReasonId"),
-                Constants$root.C_LONG$LAYOUT.withName("ReasonStringCount"),
-                Constants$root.C_POINTER$LAYOUT.withName("ReasonStrings")
-            );
-            public static MemoryLayout $LAYOUT() {
-                return Detailed.Reason$Detailed$struct$LAYOUT;
+            Detailed() {
+                // Should not be called directly
             }
-            static final VarHandle LocalizedReasonModule$VH = Reason$Detailed$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("LocalizedReasonModule"));
-            public static VarHandle LocalizedReasonModule$VH() {
-                return Detailed.LocalizedReasonModule$VH;
+
+            private static final GroupLayout $LAYOUT = MemoryLayout.structLayout(
+                wgl_h.C_POINTER.withName("LocalizedReasonModule"),
+                wgl_h.C_LONG.withName("LocalizedReasonId"),
+                wgl_h.C_LONG.withName("ReasonStringCount"),
+                wgl_h.C_POINTER.withName("ReasonStrings")
+            ).withName("$anon$269:9");
+
+            /**
+             * The layout of this struct
+             */
+            public static final GroupLayout layout() {
+                return $LAYOUT;
             }
-            public static MemoryAddress LocalizedReasonModule$get(MemorySegment seg) {
-                return (java.lang.foreign.MemoryAddress)Detailed.LocalizedReasonModule$VH.get(seg);
+
+            private static final AddressLayout LocalizedReasonModule$LAYOUT = (AddressLayout)$LAYOUT.select(groupElement("LocalizedReasonModule"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * HMODULE LocalizedReasonModule
+             * }
+             */
+            public static final AddressLayout LocalizedReasonModule$layout() {
+                return LocalizedReasonModule$LAYOUT;
             }
-            public static void LocalizedReasonModule$set( MemorySegment seg, MemoryAddress x) {
-                Detailed.LocalizedReasonModule$VH.set(seg, x);
+
+            private static final long LocalizedReasonModule$OFFSET = 0;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * HMODULE LocalizedReasonModule
+             * }
+             */
+            public static final long LocalizedReasonModule$offset() {
+                return LocalizedReasonModule$OFFSET;
             }
-            public static MemoryAddress LocalizedReasonModule$get(MemorySegment seg, long index) {
-                return (java.lang.foreign.MemoryAddress)Detailed.LocalizedReasonModule$VH.get(seg.asSlice(index*sizeof()));
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * HMODULE LocalizedReasonModule
+             * }
+             */
+            public static MemorySegment LocalizedReasonModule(MemorySegment struct) {
+                return struct.get(LocalizedReasonModule$LAYOUT, LocalizedReasonModule$OFFSET);
             }
-            public static void LocalizedReasonModule$set(MemorySegment seg, long index, MemoryAddress x) {
-                Detailed.LocalizedReasonModule$VH.set(seg.asSlice(index*sizeof()), x);
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * HMODULE LocalizedReasonModule
+             * }
+             */
+            public static void LocalizedReasonModule(MemorySegment struct, MemorySegment fieldValue) {
+                struct.set(LocalizedReasonModule$LAYOUT, LocalizedReasonModule$OFFSET, fieldValue);
             }
-            static final VarHandle LocalizedReasonId$VH = Reason$Detailed$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("LocalizedReasonId"));
-            public static VarHandle LocalizedReasonId$VH() {
-                return Detailed.LocalizedReasonId$VH;
+
+            private static final OfInt LocalizedReasonId$LAYOUT = (OfInt)$LAYOUT.select(groupElement("LocalizedReasonId"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * ULONG LocalizedReasonId
+             * }
+             */
+            public static final OfInt LocalizedReasonId$layout() {
+                return LocalizedReasonId$LAYOUT;
             }
-            public static int LocalizedReasonId$get(MemorySegment seg) {
-                return (int)Detailed.LocalizedReasonId$VH.get(seg);
+
+            private static final long LocalizedReasonId$OFFSET = 8;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * ULONG LocalizedReasonId
+             * }
+             */
+            public static final long LocalizedReasonId$offset() {
+                return LocalizedReasonId$OFFSET;
             }
-            public static void LocalizedReasonId$set( MemorySegment seg, int x) {
-                Detailed.LocalizedReasonId$VH.set(seg, x);
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * ULONG LocalizedReasonId
+             * }
+             */
+            public static int LocalizedReasonId(MemorySegment struct) {
+                return struct.get(LocalizedReasonId$LAYOUT, LocalizedReasonId$OFFSET);
             }
-            public static int LocalizedReasonId$get(MemorySegment seg, long index) {
-                return (int)Detailed.LocalizedReasonId$VH.get(seg.asSlice(index*sizeof()));
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * ULONG LocalizedReasonId
+             * }
+             */
+            public static void LocalizedReasonId(MemorySegment struct, int fieldValue) {
+                struct.set(LocalizedReasonId$LAYOUT, LocalizedReasonId$OFFSET, fieldValue);
             }
-            public static void LocalizedReasonId$set(MemorySegment seg, long index, int x) {
-                Detailed.LocalizedReasonId$VH.set(seg.asSlice(index*sizeof()), x);
+
+            private static final OfInt ReasonStringCount$LAYOUT = (OfInt)$LAYOUT.select(groupElement("ReasonStringCount"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * ULONG ReasonStringCount
+             * }
+             */
+            public static final OfInt ReasonStringCount$layout() {
+                return ReasonStringCount$LAYOUT;
             }
-            static final VarHandle ReasonStringCount$VH = Reason$Detailed$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("ReasonStringCount"));
-            public static VarHandle ReasonStringCount$VH() {
-                return Detailed.ReasonStringCount$VH;
+
+            private static final long ReasonStringCount$OFFSET = 12;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * ULONG ReasonStringCount
+             * }
+             */
+            public static final long ReasonStringCount$offset() {
+                return ReasonStringCount$OFFSET;
             }
-            public static int ReasonStringCount$get(MemorySegment seg) {
-                return (int)Detailed.ReasonStringCount$VH.get(seg);
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * ULONG ReasonStringCount
+             * }
+             */
+            public static int ReasonStringCount(MemorySegment struct) {
+                return struct.get(ReasonStringCount$LAYOUT, ReasonStringCount$OFFSET);
             }
-            public static void ReasonStringCount$set( MemorySegment seg, int x) {
-                Detailed.ReasonStringCount$VH.set(seg, x);
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * ULONG ReasonStringCount
+             * }
+             */
+            public static void ReasonStringCount(MemorySegment struct, int fieldValue) {
+                struct.set(ReasonStringCount$LAYOUT, ReasonStringCount$OFFSET, fieldValue);
             }
-            public static int ReasonStringCount$get(MemorySegment seg, long index) {
-                return (int)Detailed.ReasonStringCount$VH.get(seg.asSlice(index*sizeof()));
+
+            private static final AddressLayout ReasonStrings$LAYOUT = (AddressLayout)$LAYOUT.select(groupElement("ReasonStrings"));
+
+            /**
+             * Layout for field:
+             * {@snippet lang=c :
+             * LPWSTR *ReasonStrings
+             * }
+             */
+            public static final AddressLayout ReasonStrings$layout() {
+                return ReasonStrings$LAYOUT;
             }
-            public static void ReasonStringCount$set(MemorySegment seg, long index, int x) {
-                Detailed.ReasonStringCount$VH.set(seg.asSlice(index*sizeof()), x);
+
+            private static final long ReasonStrings$OFFSET = 16;
+
+            /**
+             * Offset for field:
+             * {@snippet lang=c :
+             * LPWSTR *ReasonStrings
+             * }
+             */
+            public static final long ReasonStrings$offset() {
+                return ReasonStrings$OFFSET;
             }
-            static final VarHandle ReasonStrings$VH = Reason$Detailed$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("ReasonStrings"));
-            public static VarHandle ReasonStrings$VH() {
-                return Detailed.ReasonStrings$VH;
+
+            /**
+             * Getter for field:
+             * {@snippet lang=c :
+             * LPWSTR *ReasonStrings
+             * }
+             */
+            public static MemorySegment ReasonStrings(MemorySegment struct) {
+                return struct.get(ReasonStrings$LAYOUT, ReasonStrings$OFFSET);
             }
-            public static MemoryAddress ReasonStrings$get(MemorySegment seg) {
-                return (java.lang.foreign.MemoryAddress)Detailed.ReasonStrings$VH.get(seg);
+
+            /**
+             * Setter for field:
+             * {@snippet lang=c :
+             * LPWSTR *ReasonStrings
+             * }
+             */
+            public static void ReasonStrings(MemorySegment struct, MemorySegment fieldValue) {
+                struct.set(ReasonStrings$LAYOUT, ReasonStrings$OFFSET, fieldValue);
             }
-            public static void ReasonStrings$set( MemorySegment seg, MemoryAddress x) {
-                Detailed.ReasonStrings$VH.set(seg, x);
+
+            /**
+             * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+             * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+             */
+            public static MemorySegment asSlice(MemorySegment array, long index) {
+                return array.asSlice(layout().byteSize() * index);
             }
-            public static MemoryAddress ReasonStrings$get(MemorySegment seg, long index) {
-                return (java.lang.foreign.MemoryAddress)Detailed.ReasonStrings$VH.get(seg.asSlice(index*sizeof()));
+
+            /**
+             * The size (in bytes) of this struct
+             */
+            public static long sizeof() { return layout().byteSize(); }
+
+            /**
+             * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+             */
+            public static MemorySegment allocate(SegmentAllocator allocator) {
+                return allocator.allocate(layout());
             }
-            public static void ReasonStrings$set(MemorySegment seg, long index, MemoryAddress x) {
-                Detailed.ReasonStrings$VH.set(seg.asSlice(index*sizeof()), x);
+
+            /**
+             * Allocate an array of size {@code elementCount} using {@code allocator}.
+             * The returned segment has size {@code elementCount * layout().byteSize()}.
+             */
+            public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+                return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
             }
-            public static long sizeof() { return $LAYOUT().byteSize(); }
-            public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-            public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-                return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+            /**
+             * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+             * The returned segment has size {@code layout().byteSize()}
+             */
+            public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+                return reinterpret(addr, 1, arena, cleanup);
             }
-            public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+            /**
+             * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+             * The returned segment has size {@code elementCount * layout().byteSize()}
+             */
+            public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+                return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+            }
         }
 
-        public static MemorySegment Detailed$slice(MemorySegment seg) {
-            return seg.asSlice(0, 24);
+        private static final GroupLayout Detailed$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("Detailed"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * struct {
+         *     HMODULE LocalizedReasonModule;
+         *     ULONG LocalizedReasonId;
+         *     ULONG ReasonStringCount;
+         *     LPWSTR *ReasonStrings;
+         * } Detailed
+         * }
+         */
+        public static final GroupLayout Detailed$layout() {
+            return Detailed$LAYOUT;
         }
-        static final VarHandle SimpleReasonString$VH = Reason$union$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("SimpleReasonString"));
-        public static VarHandle SimpleReasonString$VH() {
-            return Reason.SimpleReasonString$VH;
+
+        private static final long Detailed$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * struct {
+         *     HMODULE LocalizedReasonModule;
+         *     ULONG LocalizedReasonId;
+         *     ULONG ReasonStringCount;
+         *     LPWSTR *ReasonStrings;
+         * } Detailed
+         * }
+         */
+        public static final long Detailed$offset() {
+            return Detailed$OFFSET;
         }
-        public static MemoryAddress SimpleReasonString$get(MemorySegment seg) {
-            return (java.lang.foreign.MemoryAddress)Reason.SimpleReasonString$VH.get(seg);
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * struct {
+         *     HMODULE LocalizedReasonModule;
+         *     ULONG LocalizedReasonId;
+         *     ULONG ReasonStringCount;
+         *     LPWSTR *ReasonStrings;
+         * } Detailed
+         * }
+         */
+        public static MemorySegment Detailed(MemorySegment union) {
+            return union.asSlice(Detailed$OFFSET, Detailed$LAYOUT.byteSize());
         }
-        public static void SimpleReasonString$set( MemorySegment seg, MemoryAddress x) {
-            Reason.SimpleReasonString$VH.set(seg, x);
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * struct {
+         *     HMODULE LocalizedReasonModule;
+         *     ULONG LocalizedReasonId;
+         *     ULONG ReasonStringCount;
+         *     LPWSTR *ReasonStrings;
+         * } Detailed
+         * }
+         */
+        public static void Detailed(MemorySegment union, MemorySegment fieldValue) {
+            MemorySegment.copy(fieldValue, 0L, union, Detailed$OFFSET, Detailed$LAYOUT.byteSize());
         }
-        public static MemoryAddress SimpleReasonString$get(MemorySegment seg, long index) {
-            return (java.lang.foreign.MemoryAddress)Reason.SimpleReasonString$VH.get(seg.asSlice(index*sizeof()));
+
+        private static final AddressLayout SimpleReasonString$LAYOUT = (AddressLayout)$LAYOUT.select(groupElement("SimpleReasonString"));
+
+        /**
+         * Layout for field:
+         * {@snippet lang=c :
+         * LPWSTR SimpleReasonString
+         * }
+         */
+        public static final AddressLayout SimpleReasonString$layout() {
+            return SimpleReasonString$LAYOUT;
         }
-        public static void SimpleReasonString$set(MemorySegment seg, long index, MemoryAddress x) {
-            Reason.SimpleReasonString$VH.set(seg.asSlice(index*sizeof()), x);
+
+        private static final long SimpleReasonString$OFFSET = 0;
+
+        /**
+         * Offset for field:
+         * {@snippet lang=c :
+         * LPWSTR SimpleReasonString
+         * }
+         */
+        public static final long SimpleReasonString$offset() {
+            return SimpleReasonString$OFFSET;
         }
-        public static long sizeof() { return $LAYOUT().byteSize(); }
-        public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-        public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-            return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+        /**
+         * Getter for field:
+         * {@snippet lang=c :
+         * LPWSTR SimpleReasonString
+         * }
+         */
+        public static MemorySegment SimpleReasonString(MemorySegment union) {
+            return union.get(SimpleReasonString$LAYOUT, SimpleReasonString$OFFSET);
         }
-        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+        /**
+         * Setter for field:
+         * {@snippet lang=c :
+         * LPWSTR SimpleReasonString
+         * }
+         */
+        public static void SimpleReasonString(MemorySegment union, MemorySegment fieldValue) {
+            union.set(SimpleReasonString$LAYOUT, SimpleReasonString$OFFSET, fieldValue);
+        }
+
+        /**
+         * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+         * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+         */
+        public static MemorySegment asSlice(MemorySegment array, long index) {
+            return array.asSlice(layout().byteSize() * index);
+        }
+
+        /**
+         * The size (in bytes) of this union
+         */
+        public static long sizeof() { return layout().byteSize(); }
+
+        /**
+         * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+         */
+        public static MemorySegment allocate(SegmentAllocator allocator) {
+            return allocator.allocate(layout());
+        }
+
+        /**
+         * Allocate an array of size {@code elementCount} using {@code allocator}.
+         * The returned segment has size {@code elementCount * layout().byteSize()}.
+         */
+        public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+            return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+            return reinterpret(addr, 1, arena, cleanup);
+        }
+
+        /**
+         * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+         * The returned segment has size {@code elementCount * layout().byteSize()}
+         */
+        public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+            return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+        }
     }
 
-    public static MemorySegment Reason$slice(MemorySegment seg) {
-        return seg.asSlice(8, 24);
+    private static final GroupLayout Reason$LAYOUT = (GroupLayout)$LAYOUT.select(groupElement("Reason"));
+
+    /**
+     * Layout for field:
+     * {@snippet lang=c :
+     * union {
+     *     struct {
+     *         HMODULE LocalizedReasonModule;
+     *         ULONG LocalizedReasonId;
+     *         ULONG ReasonStringCount;
+     *         LPWSTR *ReasonStrings;
+     *     } Detailed;
+     *     LPWSTR SimpleReasonString;
+     * } Reason
+     * }
+     */
+    public static final GroupLayout Reason$layout() {
+        return Reason$LAYOUT;
     }
-    public static long sizeof() { return $LAYOUT().byteSize(); }
-    public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
-    public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
-        return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
+
+    private static final long Reason$OFFSET = 8;
+
+    /**
+     * Offset for field:
+     * {@snippet lang=c :
+     * union {
+     *     struct {
+     *         HMODULE LocalizedReasonModule;
+     *         ULONG LocalizedReasonId;
+     *         ULONG ReasonStringCount;
+     *         LPWSTR *ReasonStrings;
+     *     } Detailed;
+     *     LPWSTR SimpleReasonString;
+     * } Reason
+     * }
+     */
+    public static final long Reason$offset() {
+        return Reason$OFFSET;
     }
-    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
+
+    /**
+     * Getter for field:
+     * {@snippet lang=c :
+     * union {
+     *     struct {
+     *         HMODULE LocalizedReasonModule;
+     *         ULONG LocalizedReasonId;
+     *         ULONG ReasonStringCount;
+     *         LPWSTR *ReasonStrings;
+     *     } Detailed;
+     *     LPWSTR SimpleReasonString;
+     * } Reason
+     * }
+     */
+    public static MemorySegment Reason(MemorySegment struct) {
+        return struct.asSlice(Reason$OFFSET, Reason$LAYOUT.byteSize());
+    }
+
+    /**
+     * Setter for field:
+     * {@snippet lang=c :
+     * union {
+     *     struct {
+     *         HMODULE LocalizedReasonModule;
+     *         ULONG LocalizedReasonId;
+     *         ULONG ReasonStringCount;
+     *         LPWSTR *ReasonStrings;
+     *     } Detailed;
+     *     LPWSTR SimpleReasonString;
+     * } Reason
+     * }
+     */
+    public static void Reason(MemorySegment struct, MemorySegment fieldValue) {
+        MemorySegment.copy(fieldValue, 0L, struct, Reason$OFFSET, Reason$LAYOUT.byteSize());
+    }
+
+    /**
+     * Obtains a slice of {@code arrayParam} which selects the array element at {@code index}.
+     * The returned segment has address {@code arrayParam.address() + index * layout().byteSize()}
+     */
+    public static MemorySegment asSlice(MemorySegment array, long index) {
+        return array.asSlice(layout().byteSize() * index);
+    }
+
+    /**
+     * The size (in bytes) of this struct
+     */
+    public static long sizeof() { return layout().byteSize(); }
+
+    /**
+     * Allocate a segment of size {@code layout().byteSize()} using {@code allocator}
+     */
+    public static MemorySegment allocate(SegmentAllocator allocator) {
+        return allocator.allocate(layout());
+    }
+
+    /**
+     * Allocate an array of size {@code elementCount} using {@code allocator}.
+     * The returned segment has size {@code elementCount * layout().byteSize()}.
+     */
+    public static MemorySegment allocateArray(long elementCount, SegmentAllocator allocator) {
+        return allocator.allocate(MemoryLayout.sequenceLayout(elementCount, layout()));
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, Arena arena, Consumer<MemorySegment> cleanup) {
+        return reinterpret(addr, 1, arena, cleanup);
+    }
+
+    /**
+     * Reinterprets {@code addr} using target {@code arena} and {@code cleanupAction} (if any).
+     * The returned segment has size {@code elementCount * layout().byteSize()}
+     */
+    public static MemorySegment reinterpret(MemorySegment addr, long elementCount, Arena arena, Consumer<MemorySegment> cleanup) {
+        return addr.reinterpret(layout().byteSize() * elementCount, arena, cleanup);
+    }
 }
-
 
